grammar.js
        source_file: $ => repeat($._stm),

        _stm: $ => choice(
            $._expression_stm,
            $._declaration_stm
        ),

        function_item: $ => seq(
            optional($.privacy_visibility),
            optional($.function_qualifiers),
            'fn',
            field('name', choice($.identifier, $.metavariable)),
            field('type parameters', optional($.type_parameters)),
            field('parameters', $.parameters),
            optional(seq('->', field('return', $._type))),
            optional($.where_clause),
            field('body', $.block)
        ),

        function_qualifiers: $ => repeat1(choice(
            'async',
            'const',
            'unsafe',
            'default',
            $.extern_modifier
        )),

        let_declaration: $ => seq(
            optional($.privacy_visibility),
            'let',
            optional($.mutable_spec),
            field('pattern', $._pattern),
            optional(seq(
                ':', field('type', $._type)
            )),
            optional(seq(
                '=', field('value', $._expression)
            )),
            ';'
        ),

        parameters: $ => seq(
            '(',
            optional(sepRepInstru(',', seq(
                optional($.outer_attribute_item),
                choice(
                    $.parameter,
                    $.self_parameter,
                    '...',
                    '_',
                    $._type
                )
            ))),
            optional(','),
            ')'
        ),

        _type: $ => choice(
            $.abstract_type,                // abstract type
            $.reference_pointer_type,       // reference type
            $.raw_pointer_type,             // pointer type
            $.array_type,                    // array type
            $.function_type,                 // function type
            $.dynamic_type,                 // dynamic type
            $.bounded_type,                 // bounded type
            $.metavariable,
            $._type_identifier,
            $.never_type,
            $.tuple_type,
            $.unit_type,
            $.macro_invoc,
            $.generic_type,
            $.scoped_type_identifier,
            alias(choice(...data_types), $.prim_data_type)
        ),

        _expression: $ => choice(
            $._literal, 
            $.return_expression, 
            $.call_expression,  
            $.type_cast_expression, 
            $.range_expression,  
            $.assignment_expression,  
            $.binary_expression,  
            $.question_mark_expression, 
            $.reference_expression, 
            $.unary_expression,     
            prec.left($.identifier),
            prec.left($._reserved_identifier),
            alias(choice(...data_types), $.identifier),
            $.self,
            $.scoped_identifier,
            $.generic_function,
            $.tuple_expression,
            $.struct_expression,
            $.array_expression,
            $.field_access_expression,
            $.await_expression,
            prec(1, $.macro_invoc),
            $.unit_expression,
            $.break_expression,
            $.continue_expression,
            $.index_expression,
            $.metavariable,
            $.closure_expression,
            $.single_parenthesized_expression,
            $._expression_block
        ),

        question_mark_expression: $ => seq($._expression, '?'),

        call_expression: $ => prec(14, seq(
            field('function', $._expression),
            field('arguments', $.func_args)
        )),

        await_expression: $ => prec(13, seq(
            $._expression,
            '.',
            'await'
        )),

        async_block: $ => seq(
            'async',
            optional('move'),
            $.block
        ),

        block: $ => seq(
            '{',
            repeat($._stm),
            optional($._expression),
            '}'
        ),

        _pattern: $ => choice(
            $._literal_pattern,
            alias(choice(...data_types), $.identifier),
            $.identifier,
            $.scoped_identifier,
            $.tuple_pattern,
            $.tuple_struct_pattern,
            $.struct_pattern,
            $.ref_pattern,
            $.mut_pattern,
            $.range_pattern,
            $.reference_pattern,
            $.capture_pattern,
            $.or_pattern,
            $.rest_field_pattern,
            $.slice_pattern,
            $.const_block,  // const block *
            '_'
        ),

        integer_lit: $ => token(seq(
            choice(
                /[0-9][0-9_]*/,
                /0x[0-9a-fA-F_]+/,
                /0o[0-7_]+/,
                /0b[01_]+/
            ),
            optional(choice(...numeric_suffix))
        )),

        line_comment: $ => token(seq(
            '//',
            /.*/
        )),

        identifier: $ => token(seq(/(r#)?[a-zA-Z_][a-zA-Z0-9_]*/)),
